--- a/index.html
+++ b/index.html
@@ -20,14 +20,24 @@
       <div id="elements-container"></div>
       <div>
         <label for="male-filter">Male</label>
-        <input type="radio" id="male-filter" name="gender-filter" value="male" />
+        <input
+          type="radio"
+          id="male-filter"
+          name="gender-filter"
+          value="(male)"
+        />
         <label for="female-filter">Female</label>
-        <input type="radio" id="female-filter" name="gender-filter" value="female" />
+        <input
+          type="radio"
+          id="female-filter"
+          name="gender-filter"
+          value="(female)"
+        />
       </div>
     </main>
     <footer>
       <p>Copyright @2022</p>
     </footer>
-<script src="index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
